[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Assignments/QuestionBank.gd" type="Script" id=1]
[ext_resource path="res://Background/background_desert.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Assignments/MenuBG.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/Candy Beans.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Quiz/medium.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Assignments/BackButton.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 400
font_data = ExtResource( 4 )

[node name="QuestionBank" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.397217
margin_bottom = -0.397217
rect_pivot_offset = Vector2( 230, 180 )
script = ExtResource( 1 )

[node name="background_desert" type="Sprite" parent="."]
position = Vector2( 420.147, 537.06 )
texture = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
margin_left = 2.0
margin_right = -12.0

[node name="MenuBG" parent="Panel" instance=ExtResource( 3 )]
position = Vector2( 286.017, 497.069 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MenuBG"]
margin_left = -304.0
margin_top = -451.0
margin_right = 430.0
margin_bottom = 538.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MenuBG/ScrollContainer"]
custom_constants/separation = 60

[node name="question" type="Label" parent="Panel/MenuBG/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 56.0
margin_bottom = 14.0
text = "question"

[node name="op1" type="Label" parent="Panel/MenuBG/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 24.0
margin_bottom = 14.0
text = "op1"

[node name="op2" type="Label" parent="Panel/MenuBG/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 24.0
margin_bottom = 14.0
text = "op2"

[node name="op3" type="Label" parent="Panel/MenuBG/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 24.0
margin_bottom = 14.0
text = "op3"

[node name="op4" type="Label" parent="Panel/MenuBG/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 24.0
margin_bottom = 14.0
text = "op4"

[node name="Label" type="Label" parent="."]
margin_left = 123.134
margin_top = 119.146
margin_right = 436.134
margin_bottom = 185.146
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Question Bank"

[node name="Edit_Button" type="Button" parent="."]
visible = false
margin_left = 234.447
margin_top = 773.511
margin_right = 2320.45
margin_bottom = 1480.51
rect_scale = Vector2( 0.0720272, 0.0720272 )
icon = ExtResource( 5 )
flat = true

[node name="Edit" type="Label" parent="Edit_Button"]
margin_left = 579.137
margin_top = 80.9205
margin_right = 1521.14
margin_bottom = 603.92
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Edit"
align = 1

[node name="BackButton" parent="." instance=ExtResource( 6 )]
margin_left = 53.6533
margin_top = 127.516
margin_right = 766.653
margin_bottom = 834.516

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
